app/styles/main.scss
 // bower:scss
// endbower

@font-face {
  font-family: 'Gotham';
  src: url('/styles/fonts/Gotham-Book.ttf') format('truetype');
}



@font-face {
  font-family: 'futura';
  src: url('/styles/fonts/Futura-Bold.ttf') format('truetype');
}

@keyframes my_animation {
  from {
    max-height: 90px !important;
    opacity: 1;
    left: 0;
  }
  to {
    max-height: 0;
    opacity: 0;
    left: -50px !important;
  }
}

@-webkit-keyframes my_animation {
  from {
    max-height: 90px !important;
    opacity: 1;
    left: 0;
  }
  to {
    max-height: 0;
    opacity: 0;
    left: -50px !important;
  }
}

@-moz-keyframes my_animation {
  from {
    max-height: 90px !important;
    opacity: 1;
    left: 0;
  }
  to {
    max-height: 0;
    opacity: 0;
    left: -50px !important;
  }
}

.metaitem h1
{
  width: 50%;
  float: left;
  font-size: 10px;
  margin: 0px;
  color: white;

}

.metaitem p
{
  width: 35%;
  float: right;
  color: white;
  text-align: center;
}



.metaitem
{
  width: 100%;
  height: 30px;
  padding-top: 5px;
  padding-bottom: 5px;
  border-bottom: 1px solid white;
}

.metadata
{
text-align: left;
padding-left: 10px;
  overflow: hidden;
  position: relative;
  display: block;
}



.pointmetadata
{
padding-left: 10px;
position: relative;
overflow: hidden;
display: block;
}

.pointmetadata p
{
  color: white;
}

.cranimate.ng-enter
{
      -webkit-transition:0.5s linear all;
    -moz-transition:0.5s linear all;
    -o-transition:0.5s linear all;
    transition:0.5s linear all;
  -webkit-animation: fadeInRight 1s;
  -moz-animation: fadeInRight 1s;
  -ms-animation: fadeInRight 1s;
  animation: fadeInRight 1s;

  max-height: 0px !important;
}

.cranimate.ng-enter-active
{
  -webkit-animation: fadeInRight 1s;
  -moz-animation: fadeInRight 1s;
  -ms-animation: fadeInRight 1s;
  animation: fadeInRight 1s;
  max-height: 50px !important;
}

.cranimate.ng-leave
{
 -webkit-animation:0.5s my_animation;
  -moz-animation:0.5s my_animation;
  -o-animation:0.5s my_animation;
  animation:0.5s my_animation;
}

.sidebarheader
{
  width: 100%;
  height: 35px;
  background-color: #2F6EB2;
  border-left: 4px solid #3B83C0;
  text-align: left;
  padding-left: 10px;
}

.thslider
{
  display: block;
}

.sidebarheader p
{
  width: 50%;
  float: left;
  font-weight: bold;
  padding-top: 10px;
  color: white;
}

.sidebarheader .optionsbox
{
  width: 30%;
  float: right;
  padding-top: 10px;
  padding-right: 10px;
}



.sidebarheader .optionsbox i
{
  cursor: pointer;
  float: right;
}

.fchannels
{
  position: relative;
  overflow: hidden;
  display: block;
}

.fchannelreading{
  min-height: 50px !important;
  height: 70px !important;
  overflow: hidden;
  width: 100%;
  background-color: #34495E;
  margin-top: 5px;
}

.channelnumholder
{
  width: 20%;
  float: left;
  height: 100%;
}

.channelnum
{
  text-align: center;
  background-color: #15A89D;
  height: 60%;
  width: 90%;
    border-radius: 5px;
    margin: 0 auto;
        position: relative;
  top: 50%;
  transform: translateY(-50%);
  margin-left: 10px;

}

.channelnum p
{
  font-weight: bold;
  position: relative;
  top: 50%;
  transform: translateY(-50%);
  color: white;

}

.rangeholder
{
  width: 70%;
  float: left;
    position: relative;
  top: 50%;
  transform: translateY(-50%);
  margin: 0 auto;
  color: white;
  margin-left: 10px;
}

.rangestop
{
  width: 40%;
  float: left;
  text-align: center;
}

.rangestop p
{
  margin:0;
  font-weight: bold;
}

.rangearrow
{
  width: 20%;
  float: left;
  text-align: center;
  opacity: 0.8;

}

.rangearrow i
{
  display: inline-block;
}

.sidebarcontent
{
  z-index:100; 
}




.sidebarcollapse
{
  height: 0px !important;
  overflow: hidden;
  padding: 0px !important;

}

.searchbox
{
  padding:20px;
  padding-left: 15px;
}

#thresholdslider
{
  display: block;
  width: 200px;
  margin: 0 auto;
  padding-top: 10px;
  padding-bottom: 10px;
}

.percenttext
{
  color: white;
  font-size: 40px;
  float: left;
  width: 120px;
  background-color: RGBA(52, 73, 94, 1);
  border-radius: 5px;
}

.percentdetailtext
{
  height: 50px;
  width: 80%;
  text-align: center;
  margin: 0 auto;

}


.piechartholder
{
 width: 100%;
 height: 180px;
position: relative;
overflow: hidden;
display: block;

}

.cholder
{
width: 100px;
overflow: hidden;
display: block;
float: left;
}

.ptextholder
{
  text-align: center;
  width: 100%;
  display: block;
}


#piechart
{
  width: 100px;
  height: 100px;
  float: left;

}
 
 

#chart1
{
    width:calc(100% - 280px); 
    height:200px; 
    position: absolute;
    bottom: 120px; 
    right: 0; 
    z-index: 99;
    transition:1s;
}

.sidebarnodata
{
    width:calc(100% + 10px); 
    position: absolute;
    display: inline-block;
left: -10px;
    top: 0px;
    height: 200px;
    z-index: 99;
    background-color: RGBA(43, 33, 47, 0.9);
    text-align: center;
}

.sidebarnodata p
{
    top: 40px;
    font-family: "Gotham";
    font-size: 12px;
    color:white;
    width: 200px;
    max-width: 300px;
    margin:0 auto;
    position: relative;
    border: 1px solid white;
    border-radius: 3px;
    padding: 5px;
    padding-top:7px;
    padding-bottom:7px;
}
/* ... */

